# ChangeLog for dev-util/cppunit
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cppunit/ChangeLog,v 1.101 2014/08/25 10:58:22 ago Exp $

  25 Aug 2014; Agostino Sarubbo <ago@gentoo.org> cppunit-1.13.2-r2.ebuild:
  Stable for alpha, wrt bug #512012

  23 Aug 2014; Agostino Sarubbo <ago@gentoo.org> cppunit-1.13.2-r2.ebuild:
  Stable for ia64, wrt bug #512012

  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org> cppunit-1.13.2-r2.ebuild:
  Stable for ppc64, wrt bug #512012

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> cppunit-1.13.2-r2.ebuild:
  Stable for ppc, wrt bug #512012

  14 Jul 2014; Sergey Popov <pinkbyte@gentoo.org> cppunit-1.13.2-r2.ebuild:
  Stable on arm, wrt bug #516344

  12 Jul 2014;  <tgall@gentoo.org> cppunit-1.13.2-r2.ebuild:
  Stable on arm64 Bug #516344

  12 Jul 2014; Jeroen Roovers <jer@gentoo.org> cppunit-1.13.2-r2.ebuild:
  Stable for HPPA (bug #516344).

  06 Jul 2014; Sergey Popov <pinkbyte@gentoo.org> cppunit-1.13.2-r2.ebuild:
  Stable on amd64 and x86, wrt bug #516344

*cppunit-1.13.2-r2 (06 Jul 2014)

  06 Jul 2014; Sergey Popov <pinkbyte@gentoo.org> -cppunit-1.13.2.ebuild,
  -cppunit-1.13.2-r1.ebuild, +cppunit-1.13.2-r2.ebuild, cppunit-9999.ebuild:
  Install docs, accidentally dropped during multilib conversion, drop old
  revisions

*cppunit-1.13.2-r1 (07 Jun 2014)

  07 Jun 2014; Michał Górny <mgorny@gentoo.org> +cppunit-1.13.2-r1.ebuild,
  cppunit-9999.ebuild:
  Enable multilib support, as a test dependency of media-libs/taglib. Convert to
  git-r3.

*cppunit-1.13.2 (15 Nov 2013)

  15 Nov 2013; Tomáš Chvátal <scarabeus@gentoo.org> +cppunit-1.13.2.ebuild,
  -cppunit-1.13.0.ebuild, cppunit-9999.ebuild:
  Version bump to latest cppunit fixes dll checking and few other trivs.

  14 Nov 2013; Matt Turner <mattst88@gentoo.org> cppunit-9999.ebuild:
  Drop -O0 CFLAG replacement on alpha.

  17 Jun 2013; Sergey Popov <pinkbyte@gentoo.org> cppunit-1.13.0.ebuild,