@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cppunit/cppunit-1.13.2-r2.ebuild,v 1.9 2014/08/25 10:58:22 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cppunit/cppunit-1.13.2-r2.ebuild,v 1.10 2014/08/27 09:01:30 jer Exp $
 
 EAPI=5
 
@@ -16,7 +16,7 @@ LICENSE="LGPL-2.1"
 SLOT="0"
 # Don't move KEYWORDS on the previous line or ekeyword won't work # 399061
 [[ ${PV} = 9999 ]] || \
-KEYWORDS="alpha amd64 arm arm64 hppa ia64 ~mips ppc ppc64 ~s390 ~sparc x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos"
+KEYWORDS="alpha amd64 arm arm64 hppa ia64 ~mips ppc ppc64 ~s390 sparc x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos"
 IUSE="doc examples static-libs"
 
 RDEPEND=""
