@@ -7,23 +7,17 @@ AUX taglib-1.9.1-bytevector-simpler.patch 3685 SHA256 89992db2dd7201bfe1862c1cd1
 AUX taglib-1.9.1-missing-deletes.patch 1194 SHA256 263fbfce5accbcb635b42ae5b7af988a0a8a8d0f2dfdbb6dfd96ebf39421b3fc SHA512 1cc2796401dc1291b19245bd9a6bde9d77549d7ddab96b99b8e0f95c331a1ba7296f7107bd99f6f789cd04dd412d6e330db099ab49344c4dd1a10ccfef203fd1 WHIRLPOOL 8cced81a118f56e36943b1e45aadb234dcd20aa58378bbb5d30a97943b6f0ca4e37ea8381a02d77f8c3f4058fd2598cf450122574420e4627d1b9cedf08b343d
 AUX taglib-1.9.1-order-big-endian.patch 884 SHA256 cc3bd7acfb1c1bbbe0f8299107112bdf572bd716aa3623605f26e4312856ff2f SHA512 4f2c751f03e976da64fc1480e369443d724c420198600ae1a5e9e9cab3172289c73d15b66ec0c95165da30e52dff1d956314fd71fb067e10a11c350566671bd3 WHIRLPOOL dce49ba2b65b4f71a0867104ac81ac3e10cb09e48bf866306d813b03b472e758bc8339dd6135c18b6232a9f6b36369a44c7a6c10a513df537f75f43764fcdc48
 DIST taglib-1.9.1.tar.gz 654074 SHA256 d4da9aaaddf590ff15273b9b2c4622b6ce8377de0f40bab40155d471ede9c585 SHA512 17523b7ebdd089520289ae817b07f291be93fd0b9d3b2891eb4860a24e45943e94d25b99250c1ac477de5e51b08c39887ca13fdcc2dce17867eb60d1edb26154 WHIRLPOOL 962ec0508d8256a54ea686d4fb8d366f23f82bf10df6406c8012295ceda8416a5f23db6e450551b685798d628623eb5247e6ab7b658f955d897b86340baa5e8e
-EBUILD taglib-1.9.1-r2.ebuild 2007 SHA256 93df79475afe3dca7718359810c1e2a061f870d568c43ccf753b2b5ae0e6c7bd SHA512 3af0b0d5898f208327145cfd6f2589c51f51ff3ad6d9cdd0e420bed053435eb597eeec324319b47975ab499eb6aa0ff65374cebf1501b4ff795a6c781a672579 WHIRLPOOL bd51796e177ca56291011e49aac5d668b0e26fbc4148faa7dcdcac351870afd268ddc67ac91222e9c5b615dc5f68094230f74d94d5e88dcb79903595090bff6c
-MISC ChangeLog 19298 SHA256 9016a1551b36082a9dc0d01d11c002186953b8d570a4ab490e9ca687c7d40847 SHA512 685da202507adf4c8d786377d3f400bc0cca1712f008ead0ac8ff1654b16ef53750df221d49ff116241751cd290fe4a5d58ee32cb681edb05ad69ac6ff5dddbe WHIRLPOOL c88f7472b3caa3515df1d13e3e0bbb7ade19324a09654269de971151d3177f22eb7f2f8ad12447ce1174591538a36286f56f9b9ca436af6872806a558ca839a1
+EBUILD taglib-1.9.1-r2.ebuild 2012 SHA256 1a3134e913652fe251c6d8260b788cc88aabfe1a47917d62b097bcbc5c12030d SHA512 5461dc6ebee247570b6e459fb014a7ad070533991c81294c0ebcee70c12df5e46556b8abb98eccdd671fdde04cf61fb91ed7e00d49c28e17e97dfabbb1b2eb26 WHIRLPOOL 36ddbda072a56e5e2fa2123fb58867b3be5d89b47ba551ff57ba504bbb4e0490bfa3223616c743c93255ce898c477c994b5a590fdbd43f828f6542cbc225c044
+MISC ChangeLog 19514 SHA256 669deb727b8b32ccde8fc5de4c54fdb49f02c89077217eedb66571577f7e0cfe SHA512 4ede1ed611e1df9a71e9550888183ace3a7eee4ec443e68a4c7ff3a8db88b93583eafedd0b1f3d3aa06a64cf548614da666f61257a95b680052bc019e5a88689 WHIRLPOOL 23ea9a5a684a9c895245c99c2c4a74e26764d98ebc6ea67c1b23fdf51dd4727a313b3d94fc264f67cd66849aaaac3a64b904ccc43eb0d179b204676277513949
 MISC metadata.xml 273 SHA256 c137c0cf7d26a905e65f874572d6fe60bddc97830c460e3df26776cbe5d3bc8b SHA512 1887d35582819a15e998bc5e5149aa6d3c80cdccc293b02766ba3e16225ab5cbb7cd08d4ef59b31f49301f8ac90a5100738bfe59a636dbfa228e3e9476a4999a WHIRLPOOL 239cd208a20ce83191e2449f8e43e757c9ef21536b9b7bd33d12bcd6191d071bc35353287ac9bbc1f5466ee23da5aa1e929e55818532dfd9f3157429716c8ca0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT+xdAAAoJELp701BxlEWfqRgQAMWU+5o3YH0p37JAuIGSkfTr
-z8VTbjsY7FfGOxgItLYpuK181hPto0bw/mCiQ5Oj8O1mZI+eg/u4wESHQ6YKBuDn
-ISYLR7opvVSj8nUCNj2ZZfIHmwWjyFLd4SM94smF7QWa3YCMg35fLl085Xj2tWF5
-3pFlcykCmZUqwVHzNEc2EUrDEKBVBP0kuHPGHmC/FinNHfvi/k8ms0Ma868Hvjvg
-GDQ8qO8UNPz+6Q+cPhnkcZYu7cVll3IEgERxYKgpWm0s7+K3ptnDN3N4ZCDLGnzC
-aqHQ5Gk5XWjOb2lkKWB20UevjNDN//PLvTP5i9x8cYISJN7ZPNW/gI5OoCcSrAJB
-EAim0YxKvkFhRam4rpsr3pIOb4UQjyWCmyiRtBxSYVPFoNB6Lalp5Hb21iEDz7SP
-QzLiUBqj6eiMsIZ2oZLm9yzdS9r2+B7Vc99+DTPV3DTJ2ADmzvgXGh9G3DNGbrB7
-3iWpW0tAUTCK/oJ1ayUoQFj2qFNwKGopJ0aOo7b0+ZbEaS+seQ6BCl3NY3VrPAZB
-972JdWk4w/Qo9GV9C9lyjBFVRdwZZfbwtSTRc+B2Yr4I+rrvdwbs9E76jzNO/Y0b
-eN+YWBGuPqRD8rVFp+KTVK26oYLMUPF06A646ybn/r4/T8RRXdpY3lCwtsYujvrP
-VHhn2IXG0bH5klOtqJND
-=OTrx
+iQEcBAEBCAAGBQJT/Z7MAAoJEEdUh39IaPFNYjIH/0nE6kCwDdD+QQhhOonhPNos
+FxcgelnByhXbx7xTXkTidGKKGP8V6hdgX2e6coZgBPKzyODQEsje5r15CJ7lY7Mz
+rnPFfFNAKz28TSmIE4tEz3YSSxhcOzCDATh2HLdT4LNXbdWZjSYC65h4R6GO/YnE
+wA81B/dlO2x/Is1BTeLQC063mxOznq+ZKSVP/5fwVCJ6zIaxSp3+2geKSy1Fcsb3
+1wJLsqfpERKCeLOmw9nQKNebPr1wMXqwzLgnN1KnzR7qwnB2JdjDWQsgY9jBGmYF
+2JSFqUs3f7NEeGwf1O9+zLjDSD9U9rQjk47UN8ICZB5C3xahaN8swayPdN8Ro9Y=
+=/uvF
 -----END PGP SIGNATURE-----
