@@ -1,5 +1,5 @@
 DEFINED_PHASES=compile configure install postinst prepare setup test
-DEPEND=clvm? ( cman? ( =sys-cluster/cman-3* ) =sys-cluster/libdlm-3* ) readline? ( sys-libs/readline ) udev? ( >=virtual/libudev-208:=[static-libs?] ) virtual/pkgconfig >=sys-devel/binutils-2.20.1-r1 static? ( selinux? ( sys-libs/libselinux[static-libs] ) udev? ( >=virtual/libudev-208:=[static-libs] ) >=sys-apps/util-linux-2.16[static-libs] ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool virtual/pkgconfig virtual/pkgconfig
+DEPEND=clvm? ( cman? ( =sys-cluster/cman-3* ) =sys-cluster/libdlm-3* ) readline? ( sys-libs/readline ) udev? ( >=virtual/libudev-208:=[static-libs?] ) virtual/pkgconfig >=sys-devel/binutils-2.20.1-r1 static? ( selinux? ( sys-libs/libselinux[static-libs] ) udev? ( >=virtual/libudev-208:=[static-libs] ) <sys-apps/util-linux-2.25[static-libs] ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool virtual/pkgconfig virtual/pkgconfig
 DESCRIPTION=User-land utilities for LVM2 (device-mapper) software
 EAPI=5
 HOMEPAGE=http://sources.redhat.com/lvm2/
@@ -11,4 +11,4 @@ REQUIRED_USE=device-mapper-only? ( !clvm !cman !lvm1 !lvm2create_initrd !thin )
 SLOT=0
 SRC_URI=ftp://sources.redhat.com/pub/lvm2/LVM2.2.02.109.tgz ftp://sources.redhat.com/pub/lvm2/old/LVM2.2.02.109.tgz
 _eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	libtool	52d0e17251d04645ffaa61bfdd858944	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	udev	da001465a2e939c93f7ae16947ce3438	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=22fafd12177526026db14f7c960242ee
+_md5_=8db762b8258abbcd7496857d36041567
